# README-checker

./: .gitignore  LICENSE  README.md  README_CN.md  RELEASE.md  pyproject.toml
readme_checker/: __init__.py  analyzer.py  cli.py  extractor.py  repo.py  reporter.py  resolver.py  scorer.py  verifier.py
readme_checker/cli/: __init__.py  app.py  reporter.py
readme_checker/core/: __init__.py  parser.py  scanner.py  validator.py
readme_checker/core/scanner/: __init__.py  core.py  dotenv.py  js_ast.py  models.py  package_managers.py  patterns.py  python_ast.py
readme_checker/dynamic/: __init__.py  report.py  verifier.py
readme_checker/extraction/: __init__.py  commands.py
readme_checker/filters/: __init__.py  pathspec_filter.py
readme_checker/metrics/: __init__.py  loc.py  scoring.py  todos.py
readme_checker/nlp/: __init__.py  intent_classifier.py
readme_checker/parsing/: __init__.py  extractor.py  markdown.py
readme_checker/plugins/: __init__.py  base.py  cpp.py  golang.py  java.py  nodejs.py  python.py  rust.py
readme_checker/repo/: __init__.py  gitignore.py  loader.py
readme_checker/reporters/: __init__.py  base.py  json_reporter.py  rich_reporter.py
readme_checker/sandbox/: __init__.py  executor.py
readme_checker/semantic/: __init__.py  intent.py
readme_checker/verification/: __init__.py  analyzer.py  scorer.py  verifier.py
