[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readme-checker"
version = "0.1.1"
description = "检测项目 README 文档真实性的 CLI 工具 - Stop lies. Verify your docs."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["readme", "documentation", "verification", "cli", "github"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "markdown-it-py>=3.0.0",
    "gitpython>=3.1.0",
    "pathspec>=0.11.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "psutil>=5.0.0",
    "esprima>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
checker = "readme_checker.cli.app:app"

[project.urls]
Homepage = "https://github.com/readme-checker/readme-checker"
Repository = "https://github.com/readme-checker/readme-checker"

[tool.setuptools.packages.find]
where = ["."]
include = ["readme_checker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["readme_checker"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
